--- a/configurations/yaml/experiment_config.yaml
+++ b/configurations/yaml/experiment_config.yaml
@@ -2,3 +2,43 @@ general:
   device: "cuda" if torch.cuda.is_available() else "cpu"
   seed: 42
   num_workers: 4
+
+experiment:
+  name: "CIFAR100_Analysis"
+  version: 1
+  description: "Multi-model ablation analysis on CIFAR100 dataset"
+  save_dir: "./experiments/results"  # Base directory to save experiment-specific outputs
+  log_dir: "./logs/tensorboard"  # Directory for logs
+  checkpoints_dir: "./checkpoints"  # Base directory for checkpoints
+  resume_checkpoint: null  # Path to checkpoint to resume training from, if any
+
+checkpointing:
+  save_best_only: True
+  monitor_metric: "val_loss"
+  save_freq: "epoch"
+  max_checkpoints: 5
+
+early_stopping:
+  enabled: True
+  monitor: "val_loss"
+  patience: 5
+  min_delta: 0.001
+
+hyperparameter_optimization:
+  enabled: True
+  optimizer: "Optuna"
+  n_trials: 100
+  pruner: "SuccessiveHalvingPruner"
+  direction: "minimize"
+
+evaluation:
+  metrics: ["accuracy", "precision", "recall"]
+  batch_size: 32
+  num_workers: 4
+  verbose: True
+
+misc:
+  debug: False
+  use_mixed_precision: True
+  deterministic: False
+  additional_config: "path_to_additional_config.yaml"
