--- a/configurations/yaml/experiment_config.yaml
+++ b/configurations/yaml/experiment_config.yaml
@@ -7,21 +7,24 @@ experiment:
   name: "CIFAR100_Analysis"
   version: 1
   description: "Multi-model ablation analysis on CIFAR100 dataset"
-  save_dir: "./experiments/results"  # Base directory to save experiment-specific results
-  log_dir: "./logs/tensorboard"  # Directory for storing logs
-  checkpoints_dir: "./checkpoints"  # Base directory for any checkpoints
-  resume_checkpoint: null  # Path to checkpoint to resume training, if needed
+  save_dir: "./experiments"
+  log_dir: "./logs"
+  checkpoints_dir: "./checkpoints"
+  resume_checkpoint: null
 
 logging:
   level: "INFO"
+  # Change level to "DEBUG" for debugging to provide more detailed info
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-  log_to_file: True
-  log_to_console: True
+  log_to_file: False
+  # when set to "True" saves log messages to a file for later review (useful for debugging)
+  log_to_console: False
+  # set to "True" to print the log messages to the console when run for real-time monitoring
 
 monitoring:
   use_wandb: True
   wandb_project: "CIFAR100_Multi_Model_Analysis"
-  wandb_entity: "your_entity"
+  wandb_entity: "ZCalkins"
   tensorboard: True
 
 checkpointing:
@@ -54,3 +57,9 @@ misc:
   use_mixed_precision: True
   deterministic: False
   additional_config: "path_to_additional_config.yaml"
+  smaller_dataset: True
+  # Using a smaller subset of the data allows for faster debugging
+  num_epochs_debug: 2
+  # Reducing number of epochs also allows for faster debugging
+  profiler_enabled: True
+  # Enables pytorch lightning's simple profiler for debugging
