--- a/configurations/yaml/advanced_feature_ablation/cnn_advanced_ablation.yaml
+++ b/configurations/yaml/advanced_feature_ablation/cnn_advanced_ablation.yaml
@@ -4,12 +4,11 @@ general:
   num_workers: 4
 
 experiment:
-  name: "CIFAR100_Analysis"
-  version: 1
-  description: "Multi-model ablation analysis on CIFAR100 dataset"
-  save_dir: "./experiments"
-  log_dir: "./logs"
-  checkpoints_dir: "./checkpoints"
+  name: "CNN_Advanced_Ablation_Analysis"
+  description: "CNN advanced feature ablation analysis on the CIFAR100 dataset"
+  save_dir: "results/advanced_feature_ablation/cnn"
+  log_dir: "logs/tensorboard/advanced_feature_ablation/cnn"
+  checkpoints_dir: "checkpoints/advanced_feature_ablation/cnn"
   resume_checkpoint: null
 
 logging:
@@ -22,9 +21,6 @@ logging:
   # set to "True" to print the log messages to the console when run for real-time monitoring
 
 monitoring:
-  use_wandb: False
-  wandb_project: "CIFAR100_Multi_Model_Analysis"
-  wandb_entity: "ZCalkins"
   tensorboard: True
 
 checkpointing:
@@ -39,15 +35,8 @@ early_stopping:
   patience: 5
   min_delta: 0.001
 
-hyperparameter_optimization:
-  enabled: True
-  optimizer: "Optuna"
-  n_trials: 100
-  pruner: "SuccessiveHalvingPruner"
-  direction: "minimize"
-
 evaluation:
-  metrics: ["accuracy", "precision", "recall"]
+  metrics: ["accuracy", "precision", "recall", "f1"]
   batch_size: 32
   num_workers: 4
   verbose: True
@@ -57,9 +46,9 @@ misc:
   use_mixed_precision: True
   deterministic: False
   additional_config: "path_to_additional_config.yaml"
-  smaller_dataset: True
+  smaller_dataset: False
   # Using a smaller subset of the data allows for faster debugging
   num_epochs_debug: 2
   # Reducing number of epochs also allows for faster debugging
-  profiler_enabled: True
+  profiler_enabled: False
   # Enables pytorch lightning's simple profiler for debugging
