--- a/configurations/yaml/hyperparameter_tuning/cnn_hyperparameter_tuning.yaml
+++ b/configurations/yaml/hyperparameter_tuning/cnn_hyperparameter_tuning.yaml
@@ -47,7 +47,7 @@ hyperparameter_optimization:
   direction: "minimize"
 
 evaluation:
-  metrics: ["accuracy", "precision", "recall"]
+  metrics: ["accuracy", "precision", "recall", "f1"]
   batch_size: 32
   num_workers: 4
   verbose: True
