--- a/configurations/yaml/hyperparameter_tuning/cnn_hyperparameter_tuning.yaml
+++ b/configurations/yaml/hyperparameter_tuning/cnn_hyperparameter_tuning.yaml
@@ -4,13 +4,13 @@ general:
   num_workers: 4
 
 experiment:
-  name: "CIFAR100_Analysis"
-  version: 1
-  description: "Multi-model ablation analysis on CIFAR100 dataset"
+  name: "CNN_Hyperparameter_Tuning_CIFAR100"
+  description: "CNN hyperparameter tuning on the CIFAR100 dataset"
   save_dir: "results/hyperparameter_tuning/cnn"
   log_dir: "logs/tensorboard/hyperparameter_tuning"
   checkpoints_dir: "checkpoints/hyperparameter_tuning/cnn"
   resume_checkpoint: null
+  # Change this to the path of the checkpoint file if resuming
 
 logging:
   level: "INFO"
