--- a/configurations/yaml/hyperparameter_tuning/cnn_hyperparameter_tuning.yaml
+++ b/configurations/yaml/hyperparameter_tuning/cnn_hyperparameter_tuning.yaml
@@ -10,7 +10,7 @@ experiment:
   log_dir: "logs/tensorboard/hyperparameter_tuning"
   checkpoints_dir: "checkpoints/hyperparameter_tuning/cnn"
   resume_checkpoint: null
-  # Change this to the path of the checkpoint file if resuming
+  # Change this to the path of the checkpoint file to resume
 
 logging:
   level: "INFO"
