--- a/configurations/yaml/hyperparameter_tuning/gmlp_hyperparameter_tuning.yaml
+++ b/configurations/yaml/hyperparameter_tuning/gmlp_hyperparameter_tuning.yaml
@@ -4,12 +4,12 @@ general:
   num_workers: 4
 
 experiment:
-  name: "ViT_Hyperparameter_Tuning_CIFAR100"
-  description: "ViT hyperparameter tuning on the CIFAR100 dataset"
-  save_dir: "./results/hyperparameter_tuning/vit"
-  log_dir: "./logs/experiment_logs/hyperparameter_tuning/vit"
-  tensorboard_log_dir: "./logs/tensorboard/hyperparameter_tuning/vit"
-  checkpoints_dir: "checkpoints/hyperparameter_tuning/vit"
+  name: "gMLP_Hyperparameter_Tuning_CIFAR100"
+  description: "gMLP hyperparameter tuning on the CIFAR100 dataset"
+  save_dir: "./results/hyperparameter_tuning/gmlp"
+  log_dir: "./logs/experiment_logs/hyperparameter_tuning/gmlp"
+  tensorboard_log_dir: "./logs/tensorboard/hyperparameter_tuning/gmlp"
+  checkpoints_dir: "checkpoints/hyperparameter_tuning/gmlp"
   resume_checkpoint: null
   # Change this to the path of the checkpoint file to resume
 
