--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.23.2
-optuna==3.6.1
-pytorch-lightning==2.3.0
-torchmetrics==1.4.0.post0
-torch==2.0.1
-torchvision==0.15.2
-pyyaml==6.0
-gin-config==0.5.0
-tensorboard==2.9.0
+numpy
+optuna
+pytorch-lightning
+torchmetrics
+torch
+torchvision
+pyyaml
+gin-config
+tensorboard
