--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ numpy<2.0.0
 optuna==3.6.1
 pytorch_lightning==2.3.3
 torch==2.3.1+cu121
+torchvision==0.18.1
 torchmetrics==1.4.0.post0
-torchvision==0.18.1+cu121
+pyyaml==6.0.1
+gin-config==0.5.0
+tensorboard==2.17.0
