--- a/configurations/yaml/hyperparameter_tuning/cifar100/cnn.yaml
+++ b/configurations/yaml/hyperparameter_tuning/cifar100/cnn.yaml
@@ -35,7 +35,7 @@ evaluation:
   num_workers: 4
 misc:
   debug: false
-  use_mixed_precision: true
+  use_mixed_precision: false
   deterministic: false
   num_epochs_debug: 5
   profiler_enabled: false
