--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 # ignore all files in the logs directory
-/logs/
+/logs/*
 
 # Ignore data directory
-data/
+data/*
+!data/*.dvc
 
 # Ignore Python bytecode files
 __pycache__/
 *.pyc
 
 # Ignore virtual environment directories
-venv/
-env/
+venv/*
+env/*
 
 # Ignore Jupyter notebook checkpoints
-.ipynb_checkpoints/
+.ipynb_checkpoints/*
