--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
--r requirements.pip
+# Core Python Libraries
+torch==2.0.1
+torchvision==0.15.2
+pytorch-lightning==2.0.6
 
-numpy<2.0.0
-optuna==3.6.1
-pytorch_lightning==2.3.3
-torchmetrics==1.4.0.post0
-pyyaml==6.0.1
-gin-config==0.5.0
-tensorboard==2.17.0
+# TorchMetrics
+torchmetrics==1.0.1
+
+# Hydra and other related plugins
+hydra-core==1.3.2
+hydra-optuna-sweeper==1.3.0
+omegaconf==2.3.0
+
+# Optuna
+optuna==3.1.0
+
+# MLflow
+mlflow==2.6.0
+
+# Additional Utilities
+numpy==1.24.2
+PyYAML==6.0
+
+# Data Version Control
+dvc==3.0.1
